--- a/src/assets/app.css
+++ b/src/assets/app.css
@@ -62,14 +62,10 @@ html {
 }
 
 .header {
-  position: fixed;
-  z-index: 89;
-  top: 0;
   width: 100%;
-  min-width: 1032px;
   background: #fff;
-  box-shadow: 0 1px 0px rgba(26, 26, 26, 0.1);
-  height: 53px;
+  box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.1);
+  height: 52px;
   font-size: 16px;
 }
 
@@ -82,6 +78,8 @@ a:hover {
   color: #f60;
   text-decoration: none !important;
 }
+
+
 
 .shadow-1 {
   box-shadow: 0 0.5em 1em -0.125em rgba(10, 10, 10, 0.1),
@@ -128,13 +126,13 @@ a:hover {
 }
 
 .ellipsis {
+  overflow: hidden;
+  text-overflow: ellipsis;
   display: block;
   display: -webkit-box;
   margin: 0 auto;
   line-height: 1.4;
   -webkit-box-orient: vertical;
-  overflow: hidden;
-  text-overflow: ellipsis;
 }
 
 .is-ellipsis-1 {
